Footer Component Added

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,6 +2,7 @@
 <app-banner></app-banner>
 <app-kategori></app-kategori>
 <app-about></app-about>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
 
 <!-- template: `
