--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,18 +1,21 @@
 .footer {
   background-color: #f8f9fa;
   padding: 30px 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 .footer h4 {
   color: #333;
   font-size: 18px;
   font-weight: bold;
+  margin-top: 0;
 }
 
 .footer p {
   color: #666;
   font-size: 14px;
   line-height: 1.5;
+  margin-bottom: 10px;
 }
 
 .footer .row {
@@ -28,13 +31,46 @@
   color: #888;
   font-size: 12px;
 }
-body {
-  font-family: 'Roboto', sans-serif;
+
+.social-media {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 20px;
 }
 
-.footer {
-  /* Diğer stil kuralları */
-  font-family: 'Roboto', sans-serif;
+.social-media li {
+  margin: 0 10px;
 }
 
-/* Diğer stil kuralları */
+.social-media img {
+  width: 55%;
+  height: 100%;
+  float: left;
+}
+
+.quick-links {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  width: 44%;
+  height: 100%;
+  float: left;
+}
+
+.quick-links li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.quick-links li a {
+  text-decoration: none;
+  color: #666;
+  font-size: 20px;
+  margin-left: auto;
+}
+
+.quick-links li a:hover {
+  color: #333;
+}
