--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
 <footer class="footer">
   <div class="container">
     <div class="row">
@@ -10,6 +9,24 @@
         <h4>İletişim</h4>
         <p>Email: info@hayvansahiplendirme.com</p>
         <p>Telefon: 123-456-7890</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Sosyal Medya</h4>
+        <ul class="social-media">
+          <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
+          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
+          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
+        </ul>
+      </div>
+      <div class="col-md-6">
+        <h4>Hızlı Linkler</h4>
+        <ul class="quick-links">
+          <li><a href="#">Hakkımızda</a></li>
+          <li><a href="#">SSS</a></li>
+          <li><a href="#">İletişim</a></li>
+        </ul>
       </div>
     </div>
     <div class="row">
