--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,8 +1,4 @@
-<app-navbar></app-navbar>
-<app-banner></app-banner>
-<app-kategori></app-kategori>
-<app-about></app-about>
-<router-outlet></router-outlet>
+
 
 <!-- template: `
 <h2>Giriş Yap</h2>
@@ -13,6 +9,174 @@
   <button type="submit">Giriş</button>
 </form>
 `, -->
+<nav class="navbar navbar-expand-lg" style="background-color: #4BA47E;">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="assets/petship-logo2.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#profilim">Profilim</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a>
+        </li>
+        <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
 
+
+
+
+<div id="carouselExampleAutoplaying" class="carousel slide mb-5" data-bs-ride="carousel" style="background-color: #4BA47E;;">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/banner-image.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/banner-image3.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">geri</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">ileri</span>
+  </button>
+</div>
+<div class="container ">
+  <div >
+    <div class="text-center " style=" margin-bottom: 40px;">
+      <h1 style="margin-bottom: 40px; font-style: italic;">Kategoriler </h1>
+      <i class="fas fa-heart fa-2x"></i>
+    </div>
+    <div class="row d-flex justify-content-center mb-3 kategori-butonlar">
+      <div class="col-4 ">
+        <div class="rounded-left d-flex justify-content-center">
+          <img (click)="seciliKategori = 'kedi'" src="assets/kedi-image.png" class="mr-2 btn-img rounded-circle bg-image hover-zoom">
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="rounded-left d-flex justify-content-center">
+          <img (click)="seciliKategori = 'köpek'" src="assets/dog.png" class="mr-2 btn-img rounded-circle">
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="rounded-left d-flex justify-content-center">
+          <img (click)="seciliKategori = 'kuş'" src="assets/kus-image.png" class="mr-2 btn-img rounded-circle">
+        </div>
+      </div>
+    </div>
+    
+    
+    
+    <div  class="kategori-kartlarm">
+      <div *ngIf="seciliKategori === 'kedi'">
+        <div class="row">
+          <div class="col-md-2 " *ngFor="let kedi of kediKartlar; let i = index">
+            <div class="card mb-4 category-card" (mouseenter)="kedi.showButton = true" (mouseleave)="kedi.showButton = false">
+              <img [src]="'assets/' + kedi.gorseli" alt="Kedi Görseli" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">{{ kedi.adi }}</h5>
+                <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
+                <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>
+                <button class="btn btn-warning btn-lg" *ngIf="kedi.showButton" (click)="playAnimation(i)">
+                  <i class="fas fa-comments"></i>
+                </button>
+                <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="seciliKategori === 'köpek'">
+        <div class="row">
+          <div class="col-md-2" *ngFor="let kopek of kopekKartlar; let i = index">
+            <div class="card mb-4 category-card" (mouseenter)="kopek.showButton = true" (mouseleave)="kopek.showButton = false">
+              <img [src]="'assets/' + kopek.gorseli" alt="Kedi Görseli" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">{{ kopek.adi }}</h5>
+                <p class="card-text">Yaşı: {{ kopek.yasi }}</p>
+                <p class="card-text">Cinsiyeti: {{ kopek.cinsiyeti }}</p>
+                <button class="btn btn-warning btn-lg" *ngIf="kopek.showButton" (click)="playAnimation(i)">
+                  <i class="fas fa-comments"></i>
+                </button>
+                <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="seciliKategori === 'kuş'">
+        <div class="row">
+          <div class="col-md-2" *ngFor="let kus of kusKartlar; let i = index">
+            <div class="card mb-4 category-card " (mouseenter)="kus.showButton = true" (mouseleave)="kus.showButton = false">
+              <img [src]="'assets/' + kus.gorseli" alt="Kedi Görseli" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">{{ kus.adi }}</h5>
+                <p class="card-text">Yaşı: {{ kus.yasi }}</p>
+                <p class="card-text">Cinsiyeti: {{ kus.cinsiyeti }}</p>
+                <button class="btn btn-warning btn-lg" *ngIf="kus.showButton" (click)="playAnimation(i)">
+                  <i class="fas fa-comments"></i>
+                </button>
+                <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+  <div id="about" class="container" style="padding-top: 150px; padding-bottom: 150px;">
+    <div class="card mb-3" id="about">
+      <div class="row g-0">
+        <div class="col-md-6">
+          <div class="lottie-container" #lottieContainer></div>
+        </div>
+        <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
+          <div class="card-body" style="text-align: center; max-width: 550px;">
+            <h2 class="card-title" style="margin-bottom: 20px;">ABOUT</h2>
+            <i class="fas fa-heart fa-lg"></i>
+            <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak 
+              burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
+              about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak
+              about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak .</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  
+  <div class="to-top" [ngClass]="{'show-scrolltop': isScrollingDown}" (click)="scrollToTop()">
+    <div #animationContainer></div>
+  </div>
+  
+  
+    
