--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,11 +28,15 @@
           <li><a href="#">İletişim</a></li>
         </ul>
       </div>
-    </div>
+    </div>  <img src="assets/petship-logo2.png" alt="Logo" width="50" height="50">
     <div class="row">
       <div class="col-md-12 text-center">
         <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
       </div>
     </div>
+    <div style="background-color: blue;">
+
+      <ul><li><img src="assets/petship-logo2.png" alt="Logo" width="50" height="50"></li></ul></div>
+
   </div>
 </footer>
