--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,5 +1,5 @@
 
-  
+
 
 /* BANNER */
   .carousel-item img {
@@ -34,7 +34,7 @@
 }
 
 .btn-img:hover {
-  transform: scale(1.2); 
+  transform: scale(1.2);
   /* transform: rotate(15deg); */
   /* transform: translate(-5px, -10px); */
 }
@@ -106,7 +106,7 @@
 /* FOOTER */
 .footer {
   background-color: #f8f9fa;
-  padding: 30px 0;
+  padding: 30px 4;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -122,6 +122,7 @@
   font-size: 14px;
   line-height: 1.5;
   margin-bottom: 10px;
+  width: 90%;
 }
 
 .footer .row {
@@ -152,36 +153,36 @@
 
 .social-media img {
   width: 55%;
-  height: 100%;
+  height: 60%;
   float: left;
+  margin-left: 5%;
 }
 
 .quick-links {
   list-style: none;
-  padding: 0;
-  text-align: center;
-  width: 44%;
-  height: 100%;
+  padding: 15;
+  text-align: left;
+  width: 55%;
+  height: 50%;
   float: left;
+  margin-left: auto;
 }
 
 .quick-links li {
-  display: inline-block;
+  display: inline;
   margin: 0 10px;
 }
 
 .quick-links li a {
   text-decoration: none;
   color: #666;
-  font-size: 20px;
-  margin-left: auto;
+  font-size: 24px;
+  margin-left: left;
 }
 
 .quick-links li a:hover {
   color: #333;
 }
-
-
 
 
 
