--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -70,10 +70,10 @@
         </div>
       </div>
     </div>
-    
-    
+
+
     <!-- kartlar -->
-    
+
     <div  class="kategori-kartlarm">
       <div *ngIf="seciliKategori === 'kedi'">
         <div class="row">
@@ -152,7 +152,7 @@
           <div class="card-body" style="text-align: center; max-width: 550px;">
             <h2 class="card-title" style="margin-bottom: 20px;">ABOUT</h2>
             <i class="fas fa-heart fa-lg"></i>
-            <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak 
+            <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
               burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
               about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak
               about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak .</p>
@@ -163,25 +163,16 @@
   </div>
 
 
-  
+
 
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <h4>Hakkımızda</h4>
           <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
-        </div>
-        <div class="col-md-6">
-          <h4>İletişim</h4>
-          <p>Email: info@hayvansahiplendirme.com</p>
-          <p>Telefon: 123-456-7890</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
           <h4>Sosyal Medya</h4>
           <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
@@ -189,7 +180,10 @@
             <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
           </ul>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <h4>İletişim</h4>
+          <p>Email: info@hayvansahiplendirme.com</p>
+          <p>Telefon: 123-456-7890</p>
           <h4>Hızlı Linkler</h4>
           <ul class="quick-links">
             <li><a href="#">Hakkımızda</a></li>
@@ -197,22 +191,24 @@
             <li><a href="#">İletişim</a></li>
           </ul>
         </div>
+        <div class="col-md-4">
+          <img src="assets/petship-logo2.png" alt="Logo" width="300" height="300">
+        </div>
+      </div>
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
           <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
         </div>
       </div>
-    </div>
   </footer>
-  
 
 
 
-  
+
+
   <div class="to-top" [ngClass]="{'show-scrolltop': isScrollingDown}" (click)="scrollToTop()">
     <div #animationContainer></div>
   </div>
-  
-  
-    
+
+
