--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -25,7 +25,7 @@
 </nav>
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container bootstrap snippets bootdey">
+<div class="container bootstrap snippets bootdey" style="padding: 50px 100px 200px 100px;">
 <div class="row">
   <div class="profile-nav col-md-3">
       <div class="panel">
@@ -97,64 +97,48 @@
 </div>
 </div>
 
-<!--Hakkımızda-->
-<div id="about" class="container" style="padding-top: 150px; padding-bottom: 150px;">
-  <div class="card mb-3" id="about">
-    <div class="row g-0">
-      <div class="col-md-6">
-        <div class="lottie-container" #lottieContainer></div>
-      </div>
-      <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
-        <div class="card-body" style="text-align: center; max-width: 550px;">
-          <h2 class="card-title" style="margin-bottom: 20px;">ABOUT</h2>
-          <i class="fas fa-heart fa-lg"></i>
-          <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
-            burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
-            about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak
-            about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak .</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
- <!-- FOOTER -->
- <footer class="footer">
-  <div class="container">
+
+ 
+  <!-- FOOTER -->
+  <div class="container-fulid  footer"  >
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-5">
         <h4>Hakkımızda</h4>
-        <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
-        <h4>Sosyal Medya</h4>
-        <ul class="social-media">
-          <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
+        <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur
+        evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
+        <div style="width: 100%; margin-top: 75px;" >
+          <h4>Sosyal Medya</h4>
+          <div class="social-media">
+            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
           <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
           <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
-        </ul>
+          </div>
+        </div>
       </div>
       <div class="col-md-4">
         <h4>İletişim</h4>
         <p>Email: info@hayvansahiplendirme.com</p>
         <p>Telefon: 123-456-7890</p>
-        <h4>Hızlı Linkler</h4>
-        <ul class="quick-links">
-          <li><a href="#">Hakkımızda</a></li>
+        <div style="width: 70%; margin-top: 100px;" >
+          <h4 >Hızlı Linkler</h4>
+          <div class="list">
+            <li><a href="#">Hakkımızda</a></li>
           <li><a href="#">SSS</a></li>
           <li><a href="#">İletişim</a></li>
-        </ul>
+          </div>
+        </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3  ">
         <img src="assets/petship-logo2.png" alt="Logo" width="300" height="300">
       </div>
     </div>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="col-md-12 text-center " style="background-color: #f0f0f0">
         <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
       </div>
     </div>
-</footer>
-
 
 
 
