--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -106,8 +106,11 @@
 /* FOOTER */ /*Pes ediyorum*/
 .footer {
   background-color: #f8f9fa;
-  padding: 30px 4;
   font-family: 'Roboto', sans-serif;
+  display: flex;
+   justify-content: space-around; 
+   align-items: center ; 
+   padding: 50px 100px 50px 100px;
 }
 
 .footer h4 {
@@ -122,7 +125,7 @@
   font-size: 14px;
   line-height: 1.5;
   margin-bottom: 10px;
-  width: 90%;
+  width: 80%;
 }
 
 .footer .row {
@@ -139,23 +142,25 @@
   font-size: 12px;
 }
 
+
+
+.social-media li a {
+  text-decoration: none;
+} 
 .social-media {
+  list-style: none;  
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   list-style: none;
   padding: 0;
   margin-bottom: 20px;
+  width: 90%;
 }
 
-.social-media li {
-  margin: 0 10px;
-}
+
 
 .social-media img {
-  width: 55%;
-  height: 60%;
-  float: left;
-  margin-left: 5%;
+  width: 30%;
 }
 
 .quick-links {
@@ -183,8 +188,16 @@
 .quick-links li a:hover {
   color: #333;
 }
+.list{
+  display: flex;   
+  list-style: none;  
+  justify-content: space-between;
+}
 
-
+.list li a {
+  text-decoration: none;
+  color: #333;
+}
 
 
 /* up button */
