--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,76 +1,76 @@
-<!-- navbar -->
-<nav class="navbar navbar-expand-lg" style="background-color: #4BA47E;">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="assets/petship-logo2.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg" style="background-color: #4BA47E;">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="assets/petship-logo2.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a>
+          </li>
+          <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+
+  <!-- kategoriler -->
+  <div id="carouselExampleAutoplaying" class="carousel slide mb-5" data-bs-ride="carousel" style="background-color: #4BA47E;;">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/banner-image.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/banner-image3.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">geri</span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a>
-        </li>
-        <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
-      </ul>
-    </div>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">ileri</span>
+    </button>
   </div>
-</nav>
-
-
-
-
-
-<!-- kategoriler -->
-<div id="carouselExampleAutoplaying" class="carousel slide mb-5" data-bs-ride="carousel" style="background-color: #4BA47E;;">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/banner-image.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/banner-image3.png" class="d-block w-100" alt="...">
-    </div>
+  <div class="container ">
+    <div >
+      <div class="text-center " style=" margin-bottom: 40px;">
+        <h1 style="margin-bottom: 40px; font-style: italic;">Kategoriler </h1>
+        <i class="fas fa-heart fa-2x"></i>
+      </div>
+      <div class="row d-flex justify-content-center mb-3 kategori-butonlar">
+        <div class="col-4 ">
+          <div class="rounded-left d-flex justify-content-center">
+            <img (click)="seciliKategori = 'kedi'" src="assets/kedi-image.png" class="mr-2 btn-img rounded-circle bg-image hover-zoom">
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="rounded-left d-flex justify-content-center">
+            <img (click)="seciliKategori = 'köpek'" src="assets/dog.png" class="mr-2 btn-img rounded-circle">
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="rounded-left d-flex justify-content-center">
+            <img (click)="seciliKategori = 'kuş'" src="assets/kus-image.png" class="mr-2 btn-img rounded-circle">
+          </div>
+        </div>
+      </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">geri</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">ileri</span>
-  </button>
-</div>
-<div class="container ">
-  <div >
-    <div class="text-center " style=" margin-bottom: 40px;">
-      <h1 style="margin-bottom: 40px; font-style: italic;">Kategoriler </h1>
-      <i class="fas fa-heart fa-2x"></i>
-    </div>
-    <div class="row d-flex justify-content-center mb-3 kategori-butonlar">
-      <div class="col-4 ">
-        <div class="rounded-left d-flex justify-content-center">
-          <img (click)="seciliKategori = 'kedi'" src="assets/kedi-image.png" class="mr-2 btn-img rounded-circle bg-image hover-zoom">
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="rounded-left d-flex justify-content-center">
-          <img (click)="seciliKategori = 'köpek'" src="assets/dog.png" class="mr-2 btn-img rounded-circle">
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="rounded-left d-flex justify-content-center">
-          <img (click)="seciliKategori = 'kuş'" src="assets/kus-image.png" class="mr-2 btn-img rounded-circle">
-        </div>
-      </div>
-    </div>
-
 
     <!-- kartlar -->
 
@@ -130,7 +130,7 @@
     </div>
   </div>
 </div>
-  </div>
+</div>
 
 
 
@@ -142,7 +142,7 @@
 <!-- hakkımzda -->
 
 
-  <div id="about" class="container" style="padding-top: 150px; padding-bottom: 150px;">
+  <div id="about" class="container" style="padding-top: 150px; padding-bottom: 180px;">
     <div class="card mb-3" id="about">
       <div class="row g-0">
         <div class="col-md-6">
@@ -167,42 +167,44 @@
 
 
   <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h4>Hakkımızda</h4>
-          <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
+  <div class="container-fulid  footer"  >
+    <div class="row">
+      <div class="col-md-5">
+        <h4>Hakkımızda</h4>
+        <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur
+        evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
+        <div style="width: 100%; margin-top: 75px;" >
           <h4>Sosyal Medya</h4>
-          <ul class="social-media">
+          <div class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
-          </ul>
+          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
+          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
+          </div>
         </div>
-        <div class="col-md-4">
-          <h4>İletişim</h4>
-          <p>Email: info@hayvansahiplendirme.com</p>
-          <p>Telefon: 123-456-7890</p>
-          <h4>Hızlı Linkler</h4>
-          <ul class="quick-links">
+      </div>
+      <div class="col-md-4">
+        <h4>İletişim</h4>
+        <p>Email: info@hayvansahiplendirme.com</p>
+        <p>Telefon: 123-456-7890</p>
+        <div style="width: 70%; margin-top: 100px;" >
+          <h4 >Hızlı Linkler</h4>
+          <div class="list">
             <li><a href="#">Hakkımızda</a></li>
-            <li><a href="#">SSS</a></li>
-            <li><a href="#">İletişim</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <img src="assets/petship-logo2.png" alt="Logo" width="300" height="300">
+          <li><a href="#">SSS</a></li>
+          <li><a href="#">İletişim</a></li>
+          </div>
         </div>
       </div>
+      <div class="col-md-3  ">
+        <img src="assets/petship-logo2.png" alt="Logo" width="300" height="300">
       </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
-        </div>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center " style="background-color: #f0f0f0">
+        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
       </div>
-  </footer>
-
+    </div>
 
 
 
@@ -211,4 +213,4 @@
     <div #animationContainer></div>
   </div>
 
-
+    
