--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -189,14 +189,15 @@
         <div style="width: 70%; margin-top: 100px;" >
           <h4 >Hızlı Linkler</h4>
           <div class="list">
-            <li><a href="#">Hakkımızda</a></li>
-          <li><a href="#">SSS</a></li>
-          <li><a href="#">İletişim</a></li>
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('carouselExampleAutoplaying')">Anasayfa</a></li>
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a></li>
+          <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
+          <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
           </div>
         </div>
       </div>
       <div class="col-md-3  ">
-        <img src="assets/petship-logo2.png" alt="Logo" width="300" height="300">
+        <img src="assets/transparent-logo.png" alt="Logo" width="300" height="300">
       </div>
     </div>
     </div>
@@ -213,4 +214,4 @@
     <div #animationContainer></div>
   </div>
 
-    
+
