--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -99,7 +99,7 @@
 
 
 
- 
+
   <!-- FOOTER -->
   <div class="container-fulid  footer"  >
     <div class="row">
@@ -123,14 +123,15 @@
         <div style="width: 70%; margin-top: 100px;" >
           <h4 >Hızlı Linkler</h4>
           <div class="list">
-            <li><a href="#">Hakkımızda</a></li>
-          <li><a href="#">SSS</a></li>
-          <li><a href="#">İletişim</a></li>
+            <li>Anasayfa</li>
+            <li>Hakkımızda</li>
+            <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
+            <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
           </div>
         </div>
       </div>
       <div class="col-md-3  ">
-        <img src="assets/petship-logo2.png" alt="Logo" width="300" height="300">
+        <img src="assets/transparent-logo.png" alt="Logo" width="300" height="300">
       </div>
     </div>
     </div>
