--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg" style="background-color: #4BA47E;">
+  <nav class="navbar navbar-expand-lg" id="home" style="background-color: #4BA47E;">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="assets/petship-logo2.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
@@ -189,7 +189,7 @@
         <div style="width: 70%; margin-top: 100px;" >
           <h4 >Hızlı Linkler</h4>
           <div class="list">
-          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('carouselExampleAutoplaying')">Anasayfa</a></li>
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('home')">Anasayfa</a></li>
           <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a></li>
           <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
           <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
