--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -123,10 +123,8 @@
         <div style="width: 70%; margin-top: 100px;" >
           <h4 >Hızlı Linkler</h4>
           <div class="list">
-            <li>Anasayfa</li>
-            <!--ANASAYFA <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('home')">Anasayfa</a></li>-->
-            <li>Hakkımızda</li>
-            <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
+            <li><a class="nav-link" routerLink="/homepage" routerLinkActive="active" aria-current="page" href="homepage" >AnaSayfa</a></li>
+            <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="profile" >Profilim</a></li>
             <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
           </div>
         </div>
