--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -36,61 +36,71 @@
               <h1>Çağla Özay</h1>
               <p>çaça@theEmail.com</p>
           </div>
-          <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="#"> <i class="fa fa-user"></i> Profile</a></li>
-              <li><a href="#"> <i class="fa fa-edit"></i> Edit profile</a></li>
+          <ul class="nav nav-pills nav-stacked" >
+              <li class="active" ><a href="#" > <i class="fa fa-user"></i> kişisel bilgiler</a></li>
+              <li ><a href="#"> <i class="fa fa-edit mt-3"></i> hayvan geçmişi</a></li>
           </ul>
       </div>
   </div>
-  <div class="profile-info col-md-9">
+  <div class="profile-info col-md-9"> 
       <div class="panel">
-          <form>
-              <textarea placeholder="Whats in your mind today?" rows="2" class="form-control input-lg p-text-area"></textarea>
-          </form>
-          <footer class="panel-footer">
-              <button class="btn btn-warning pull-right">Post</button>
-              <ul class="nav nav-pills">
-                  <li>
-                      <a href="#"><i class="fa fa-camera"></i></a>
-                  </li>
-              </ul>
-          </footer>
-      </div>
-      <div class="panel">
-          <div class="bio-graph-heading">
-              Aliquam ac magna metus. Nam sed arcu non tellus fringilla fringilla ut vel ispum. Aliquam ac magna metus.
+          <div class="bio-graph-heading mb-5" >
+              sizin harika profiliniz böyle bakın da mutlu olun ayol sizin harika profiliniz böyle bakın da mutlu olun ayol.
           </div>
-          <div class="panel-body bio-graph-info">
-              <h1>Bio Graph</h1>
-              <div class="row">
+          <h4>Kişisel bilgiler</h4>
+          <div class="row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+              <div class="card">
+                <div class="card-body">
                   <div class="bio-row">
-                      <p><span>Ad </span>: Camila</p>
-                  </div>
-                  <div class="bio-row">
-                      <p><span>Soyad </span>: Smith</p>
-                  </div>
-                  <div class="bio-row">
-                      <p><span>Konum </span>: Australia</p>
-                  </div>
-                  <div class="bio-row">
-                      <p><span>Doğum Tarihi</span>: 13 July 1983</p>
-                  </div>
-                  <div class="bio-row">
-                      <p><span>Email </span>: jsmith@flatlab.com</p>
-                  </div>
-                  <div class="bio-row">
-                      <p><span>GSM </span>: 88 (02) 123456</p>
-                  </div>
-                  <div class="bio-row">
-                    <p><span>Cinsiyet </span>: UI Designer</p>
+                    <h5>Ad:</h5>
+                    <p>Çağla</p>
                 </div>
                 <div class="bio-row">
-                  <p><span>Daha önce evcil hayvan baktınız mı?</span>: UI Designer</p>
+                  <h5>Ad:</h5>
+                  <p>Çağla</p>                
+                </div>
+                <div class="bio-row">
+                  <h5>Ad:</h5>
+                  <p>Çağla</p>                
+                </div>
+                <div class="bio-row">
+                  <h5>Ad:</h5>
+                  <p>Çağla</p>               
+                 </div>
+                <div class="bio-row">
+                  <h5>Ad:</h5>
+                  <p>Çağla</p>                              
+                </div>
+                </div>
               </div>
-              <div class="bio-row">
-                <p><span>Şuan evcil hayvanınız var mı?</span>: UI Designer</p>
             </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                <div class="bio-row">
+                  <h5>Ad:</h5>
+                  <p>Çağla</p>                
+                </div>
+                <div class="bio-row">
+                  <h5>Ad:</h5>
+                  <p>Çağla</p>             
+                 </div>
+              <div class="bio-row">
+                <h5>Ad:</h5>
+                <p>Çağla</p>            
               </div>
+            <div class="bio-row">
+              <h5>Ad:</h5>
+              <p>Çağla</p>          
+            </div>
+            <div class="bio-row">
+              <h5>Ad:</h5>
+              <p>Çağla</p>          
+            </div>
+                </div>
+              </div>
+            </div>
           </div>
       </div>
  </div>
@@ -135,10 +145,10 @@
       </div>
     </div>
     </div>
-    <div class="row">
-      <div class="col-md-12 text-center " style="background-color: #f0f0f0">
-        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
-      </div>
+    <div class="container-fulid" style="background-color: #f0f0f0; ">
+        <div class="col-md-12 text-center " style="height: 40px;">
+          <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p> 
+        </div>
     </div>
 
 
