--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -201,11 +201,11 @@
       </div>
     </div>
     </div>
-    <div class="row">
-      <div class="col-md-12 text-center " style="background-color: #f0f0f0">
-        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
+    <div class="container-fulid" style="background-color: #f0f0f0; ">
+      <div class="col-md-12 text-center " style="height: 40px;">
+        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p> 
       </div>
-    </div>
+  </div>
 
 
 
