--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,8 +1,8 @@
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg" id="home" style="background-color: #4BA47E;">
+  <nav class="navbar navbar-expand-lg " id="home" style="background-color: #4BA47E; padding: 0px;">
     <div class="container">
       <a class="navbar-brand" routerLinkActive="/homepage" href="/homepage">
-        <img src="assets/petship-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
+        <img src="assets/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
