--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg" id="home" style="background-color: #4BA47E;">
+<nav class="navbar navbar-expand-lg" id="home" style="background-color: #4BA47E;  padding: 0px">
   <div class="container">
     <a class="navbar-brand" routerLinkActive="/homepage" href="/homepage">
       <img src="assets/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
