--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -42,10 +42,11 @@
           </ul>
       </div>
   </div>
-  <div class="profile-info col-md-9"> 
+  <div class="profile-info col-md-9">
       <div class="panel">
           <div class="bio-graph-heading mb-5" >
               sizin harika profiliniz böyle bakın da mutlu olun ayol sizin harika profiliniz böyle bakın da mutlu olun ayol.
+              <h1>ABİ NE DİYON</h1>
           </div>
           <h4>Kişisel bilgiler</h4>
           <div class="row">
@@ -58,19 +59,19 @@
                 </div>
                 <div class="bio-row">
                   <h5>Ad:</h5>
-                  <p>Çağla</p>                
+                  <p>Çağla</p>
                 </div>
                 <div class="bio-row">
                   <h5>Ad:</h5>
-                  <p>Çağla</p>                
+                  <p>Çağla</p>
                 </div>
                 <div class="bio-row">
                   <h5>Ad:</h5>
-                  <p>Çağla</p>               
+                  <p>Çağla</p>
                  </div>
                 <div class="bio-row">
                   <h5>Ad:</h5>
-                  <p>Çağla</p>                              
+                  <p>Çağla</p>
                 </div>
                 </div>
               </div>
@@ -80,23 +81,23 @@
                 <div class="card-body">
                 <div class="bio-row">
                   <h5>Ad:</h5>
-                  <p>Çağla</p>                
+                  <p>Çağla</p>
                 </div>
                 <div class="bio-row">
                   <h5>Ad:</h5>
-                  <p>Çağla</p>             
+                  <p>Çağla</p>
                  </div>
               <div class="bio-row">
                 <h5>Ad:</h5>
-                <p>Çağla</p>            
+                <p>Çağla</p>
               </div>
             <div class="bio-row">
               <h5>Ad:</h5>
-              <p>Çağla</p>          
+              <p>Çağla</p>
             </div>
             <div class="bio-row">
               <h5>Ad:</h5>
-              <p>Çağla</p>          
+              <p>Çağla</p>
             </div>
                 </div>
               </div>
@@ -146,7 +147,7 @@
     </div>
     <div class="container-fulid" style="background-color: #f0f0f0; ">
         <div class="col-md-12 text-center " style="height: 40px;">
-          <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p> 
+          <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
         </div>
     </div>
 
