--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -24,8 +24,11 @@
   </div>
 </nav>
 
+
+
+<!-- burası profil componenti -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container bootstrap snippets bootdey" style="padding: 50px 100px 200px 100px;">
+<div class="container bootstrap snippets bootdey" style="padding: 10px 100px 200px 100px;">
 <div class="row">
   <div class="profile-nav col-md-3">
       <div class="panel">
@@ -37,20 +40,19 @@
               <p>çaça@theEmail.com</p>
           </div>
           <ul class="nav nav-pills nav-stacked" >
-              <li class="active" ><a href="#" > <i class="fa fa-user"></i> kişisel bilgiler</a></li>
-              <li ><a href="#"> <i class="fa fa-edit mt-3"></i> hayvan geçmişi</a></li>
+              <li class="active" ><a a (click)="changeContent('home')" > <i class="fa fa-user"></i> Kişisel Bilgiler</a></li>
+              <li ><a (click)="changeContent('about')"> <i class="fa fa-edit mt-3"></i> Hayvan Geçmişi</a></li>
           </ul>
       </div>
   </div>
-  <div class="profile-info col-md-9">
+  <div class=" profile-info col-md-9">
       <div class="panel">
-          <div class="bio-graph-heading mb-5" >
+          <div class="bio-graph-heading mb-3" >
               sizin harika profiliniz böyle bakın da mutlu olun ayol sizin harika profiliniz böyle bakın da mutlu olun ayol.
-              <h1>ABİ NE DİYON</h1>
           </div>
-          <h4>Kişisel bilgiler</h4>
-          <div class="row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="row" id="home" *ngIf="currentContent === 'home'">
+            <h4>Kişisel Bilgiler</h4>
+            <div class="col-sm-6 mb-3 ">
               <div class="card">
                 <div class="card-body">
                   <div class="bio-row">
@@ -103,14 +105,75 @@
               </div>
             </div>
           </div>
+          <div class="row" id="about" *ngIf="currentContent === 'about'">
+            <h4> Hayvan Geçmişi</h4>
+            <div class="col-sm-12 mb-3 ">
+              <div class="card ">
+                <div class="card-body">
+                  <div class="card mb-4 mt-3">
+                    <div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
+                      <img src="assets/dog.png" alt="" style="border-radius: 50%; width: 12%;">
+                      <div>
+                        <h6>Mina</h6>
+                      <h6>2 yaşında</h6>
+                      <h6>22/10/2007</h6>
+                      </div>
+                      <div class="spinner-grow text-success" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                      </div>
+                      <p>merhaba ben mina en yakın arkadaşımı arıyorum..</p>
+
+
+                    </div>
+                  </div>
+                  <div class="card mb-4">
+                    <div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
+                      <img src="assets/dog.png" alt="" style="border-radius: 50%; width: 12%;">
+                      <div>
+                        <h6>Mina</h6>
+                      <h6>2 yaşında</h6>
+                      <h6>22/10/2007</h6>
+                      </div>
+                      <div class="spinner-grow text-danger" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                      </div>
+                      <p>merhaba ben mina en yakın arkadaşımı arıyorum..</p>
+                      
+
+                    </div>
+                  </div>
+                  <div class="card mb-4">
+                    <div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
+                      <img src="assets/dog.png" alt="" style="border-radius: 50%; width: 12%;">
+                      <div>
+                        <h6>Mina</h6>
+                      <h6>2 yaşında</h6>
+                      <h6>22/10/2007</h6>
+                      </div>
+                      <div class="spinner-grow text-warning" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                      </div>
+                      <p>merhaba ben mina en yakın arkadaşımı arıyorum..</p>
+                      
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+              </div>
+            </div>
+          </div>
       </div>
  </div>
-</div>
-</div>
 
 
 
 
+
+
+  <!-- FOOTER -->
   <!-- FOOTER -->
   <div id="contact" class="container-fulid footer"  style="margin-top: 65px;">
     <div class="row">
@@ -134,9 +197,10 @@
         <div style="width: 70%; margin-top: 100px;" >
           <h4 >Hızlı Linkler</h4>
           <div class="list">
-            <li><a class="nav-link" routerLink="/homepage" routerLinkActive="active" aria-current="page" href="homepage" >AnaSayfa</a></li>
-            <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="profile" >Profilim</a></li>
-            <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('home')">Anasayfa</a></li>
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a></li>
+          <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
+          <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
           </div>
         </div>
       </div>
@@ -146,10 +210,10 @@
     </div>
     </div>
     <div class="container-fulid" style="background-color: #f0f0f0; ">
-        <div class="col-md-12 text-center " style="height: 40px;">
-          <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
-        </div>
-    </div>
+      <div class="col-md-12 text-center " style="height: 40px;">
+        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p> 
+      </div>
+  </div>
 
 
 
