--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,701 +1,1460 @@
+
+/*NAVBAR*/
+
 .navbar-nav .nav-link {
-  font-size: 14px;
-  color: white;
-  margin-right: 60px;
+
+  font-size: 14px; /* Yazı boyutunu istediğiniz değere ayarlayın */
+
+  color: white; /* Yazı rengini beyaz yapmak için */
+
+  margin-right: 60px; /* Yazılar arasındaki boşluğu ayarlamak için */
+
   font-weight: bold;
+
   letter-spacing: 2px;
-}
 
-.navbar-nav a {
-  background-image: linear-gradient(to right, #d6bc54, #d6bc54 50%, #ffffff 50%);
-  background-size: 200% 100%;
-  background-position: -100%;
-  display: inline-block;
-  padding: 5px 0;
-  position: relative;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 0.3s ease-in-out;
-}
-
-.navbar-nav a:before {
-  content: '';
-  background: #d6bc54;
-  display: block;
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 0;
-  height: 3px;
-  transition: all 0.3s ease-in-out;
-}
-
-.navbar-nav a:hover {
-  background-position: 0;
-}
-
-.navbar-nav a:hover::before {
-  width: 100%;
-}
-
-/* Presentational Styles */
-body {
-  display: grid;
-  font-family: 'Poppins', sans-serif;
-  font-size: 27px;
-  font-weight: 700;
-  height: 100vh;
-  place-items: center;
 }
 
 
 
+/*BODY*/
 
 body {
+
   color: #797979;
+
   background: #000000;
+
   font-family: 'Open Sans', sans-serif;
+
+  font-style: italic;
+
   padding: 0px !important;
+
   margin: 0px !important;
+
   font-size: 13px;
+
   text-rendering: optimizeLegibility;
+
 }
+
+
+
 
 .profile-nav, .profile-info{
-  margin-top:10px;  /*navbar eklenicek*/
 
+  margin-top:0px;  /*navbar eklenicek*/
 }
+
+
+
 
 .profile-nav .user-heading {
-  background: #fbc02d;
+
+  background: #4BA47E;
+
   color: #fff;
+
   border-radius: 8px 8px 8px 8px;
+
   padding: 3%;
+
   text-align: center;
+
 }
+
+
+
 
 
 .profile-nav .user-heading.round a  {
+
   border-radius: 50%;
+
   border: 10px solid rgba(255,255,255,0.3);
+
   display: inline-block;
+
   margin-top: 20%;
+
 }
 
-.profile-nav .user-heading a img {
-  width: 200px;
-  height: 200px;
+
+
+
+.profile-nav .user-heading a img { /*img küçült*/
+
+  width: 100px;
+
+  height: 100px;
+
   border-radius: 50%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+
+  display: center;
+
 }
+
+
+
 
 .profile-nav .user-heading h1 {
+
   font-size: 22px;
+
   font-weight: 300;
+
   margin-bottom: 5px;
+
 }
+
+
+
 
 .profile-nav .user-heading p {
-  font-size: 12px;
+
+  font-size: 15px;
+
   margin-top: 5px;
+
 }
+
+
+
 
 .profile-nav ul {
-  margin-top: 10px;   /*profile/edit profile*/
-  font-size: 20px;
+
+  margin-top: 10px;   /*nav nav-pills nav-stacked*/
+
+  font-size: 16px;
+
   display: flex;
+
   flex-direction: column;
+  font-style: italic;
 
 }
+
+
+
 
 .profile-nav ul > li {
+
   border-bottom: 1px solid #ebeae6;
+
   margin-top: 0;
+
   line-height: 30px;
+
   height: 50px;
+
 }
+
+
+
 
 .profile-nav ul > li:last-child {
+
   border-bottom: none;
+
 }
+
+
+
 
 .profile-nav ul > li > a {
+
   border-radius: 0;
+
   color: #89817f;
+
   border-left: 5px solid #fff;
-  padding: 5px 25% 5px 10px;
+
+  padding: 5px 10px 5px 10px;
+
+
+
 
 
 }
 
+
+
+
 .profile-nav ul > li > a:hover, .profile-nav ul > li > a:focus, .profile-nav ul li.active  a {
+
   background: #f8f7f5 !important;
-  border-left: 5px solid #fbc02d;
+
+  border-left: 5px solid #4BA47E;
+
   color: #89817f !important;
+
   margin-right: 1px;
 
 
+
+
+
 }
+
+
+
 
 .profile-nav ul > li:last-child > a:last-child {
+
   border-radius: 0 0 4px 4px;
+
+
+
 
 }
 
+
+
+
 .profile-nav ul > li > a > i{
+
   font-size: 16px;
+
   padding-right: 10px;
+
   color: #bcb3aa;
 
 
+
+
+
 }
 
+
+
+
 .r-activity {
+
   margin: 6px 0 0;
+
   font-size: 12px;
+
 }
+
+
+
 
 
 .p-text-area, .p-text-area:focus {
+
   border: none;
+
   font-weight: 300;
+
   box-shadow: none;
+
   color: #c3c3c3;
+
   font-size: 16px;
+
   height: 200px;
+
 }
+
+
+
+
 
 .profile-info .panel-footer {
+
   background-color:#f8f7f5 ;
+
   border-top: 1px solid #e7ebee;
+
   width: 100%;   /*post*/
+
   height: 30px;
+
 }
 
+
+
+
 .profile-info .panel-footer ul li a {
+
   color: #7a7a7a;
+
   margin-right: 20px;  /* li boşluğun genişliği */
+
   margin-left: 20px;
+
+}
+
+.tab-block {
+
+  position: relative;
+
+}
+
+/* Tabs Content */
+
+.tab-block .tab-content {
+
+  overflow: auto;
+
+  position: relative;
+
+  z-index: 10;
+
+  min-height: 125px;
+
+  padding: 16px 12px;
+
+  border: 1px solid #e2e2e2;
+
+  background-color: #FFF;
+
+}
+
+/*===============================================
+
+  Tab Navigation
+
+================================================= */
+
+.tab-block .nav-tabs {
+
+  position: relative;
+
+  border: 0;
+
+}
+
+/* nav tab item */
+
+.tab-block .nav-tabs > li {
+
+  float: left;
+
+  margin-bottom: -1px;
+
+}
+
+/* nav tab link */
+
+.tab-block .nav-tabs > li > a {  z-index: 9;
+
+  position: relative;
+
+  color: #4BA47E;
+
+  font-size: 18px;
+
+  font-weight: 400;
+
+  padding: 14px 20px;
+
+  margin-right: -1px;
+
+  border-color: #e2e2e2;
+
+  border-radius: 8px 8px 0 0;
+
+  background: #fafafa;
+
+}
+
+.tab-block .nav-tabs > li:first-child > a {
+
+  margin-left: 0;
+
+}
+
+/* nav tab link:hover */
+
+.tab-block .nav-tabs > li > a:hover {
+
+  background-color: #f4f4f4;
+
+}
+
+/* nav tab active link:focus:hover */
+
+.tab-block .nav-tabs > li.active > a,
+
+.tab-block .nav-tabs > li.active > a:hover,
+
+.tab-block .nav-tabs > li.active > a:focus {
+
+  cursor: default;
+
+  position: relative;
+
+  z-index: 12;
+
+  color: #555555;
+
+  background: #FFF;
+
+  border-color: #e2e2e2;
+
+  border-bottom: 1px solid #FFF;
+
 }
 
 .bio-graph-heading {
-  background: #fbc02d;
-  color: #000000;
+
+  background: #4BA47E;
+
+  padding: 30px 80px;
+
+  border-radius: 8px 8px  8px 8px ;
+
+}
+
+.bio-graph-heading h4{
+
+  float: none;
+
   text-align: center;
-  font-style: italic;
-  padding: 40px 110px;
-  border-radius: 4px 4px 0 0;
-  font-size: 16px;
-  font-weight: 300;
 
 }
 
-.bio-graph-info {       /*bio*/
-  margin-top: 3%;
-  margin-bottom: 3%;
-  margin-left: 5%;
-  margin-right: 0;
 
-}
 
-.bio-graph-info h1 {
-  color:  #f17007;
-  font-size: 20px;
-  font-weight: 200;
-  margin: 5 5 20px;   /*baslık*/
-}
 
 .bio-row {         /*bilgiler*/
+
   color: #0c7e58;
+
   width: 100%;
+
   float: left;
-  margin-bottom: 10px;
+
+  margin-top: 10px;
+
   padding:0 15px;
+
   height: 50px;
-  display: flex; justify-content: start; gap: 25px;
+
+  display: flex;
+
+  gap: 30%;
+
+  font-style: italic;
+
+}
+
+.bio-row1 {         /*bilgiler2 bio rowları ayır*/
+
+  color: #0c7e58;
+
+  width: 100%;
+
+  float: left;
+
+  margin-top: 10px;
+
+  margin-bottom: 45px;
+
+  padding:0 15px;
+
+  height: 50px;
+
+  display: flex;
+
+  gap: 30%;
+
+  font-style: italic;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.scrollable input[type="radio"] {
+  display: none;
+}
+
+.scrollable label {
+  display: inline-block;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.scrollable label:before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  border: 2px solid #4BA47E;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+
+.scrollable input[type="radio"]:checked + label:before {
+  background-color: #000;
 }
 
 .bio-row p span {
+
   color:#89817e;
+
   font-weight: 400;
+
   width: 100%;
- 
+
   font-size: 20px;
-  display: flex;
-  justify-content: space-between;
 
 }
+
+
+
 
 .bio-chart, .bio-desk {
+
   float: left;
+
 }
+
+
+
 
 .bio-chart {
+
   width: 40%;
+
 }
+
+
+
 
 .bio-desk {
+
   width: 60%;
+
 }
+
+
+
 
 .bio-desk h4 {
+
   font-size: 15px;
+
   font-weight:400;
+
 }
+
+
+
 
 .bio-desk h4.terques {
+
   color: #4CC5CD;
+
 }
+
+
+
 
 .bio-desk h4.red {
+
   color: #e26b7f;
+
 }
+
+
+
 
 .bio-desk h4.green {
+
   color: #97be4b;
+
 }
+
+
+
 
 .bio-desk h4.purple {
+
   color: #caa3da;
+
 }
+
+
+
 
 .file-pos {
+
   margin: 6px 0 10px 0;
+
 }
+
+
+
 
 .profile-activity h5 {
+
   font-weight: 300;
+
   margin-top: 0;
+
   color: #c3c3c3;
+
 }
+
+
+
 
 .summary-head {
+
   background: #ee7272;
+
   color: #fff;
+
   text-align: center;
+
   border-bottom: 1px solid #ee7272;
+
 }
+
+
+
 
 .summary-head h4 {
+
   font-weight: 300;
+
   text-transform: uppercase;
+
   margin-bottom: 5px;
+
 }
+
+
+
 
 .summary-head p {
+
   color: rgba(255,255,255,0.6);
+
 }
+
+
+
 
 ul.summary-list {
+
   display: inline-block;
+
   padding-left:0 ;
+
   width: 100%;
+
   margin-bottom: 0;
+
 }
+
+
+
 
 ul.summary-list > li {
+
   display: inline-block;
+
   width: 19.5%;
+
   text-align: center;
+
 }
+
+
+
 
 ul.summary-list > li > a > i {
+
   display:block;
+
   font-size: 18px;
+
   padding-bottom: 5px;
+
 }
+
+
+
 
 ul.summary-list > li > a {
+
   padding: 10px 0;
+
   display: inline-block;
+
   color: #818181;
+
 }
+
+
+
 
 ul.summary-list > li  {
+
   border-right: 1px solid #eaeaea;
+
 }
+
+
+
 
 ul.summary-list > li:last-child  {
+
   border-right: none;
+
 }
+
+
+
 
 .activity {
+
   width: 100%;
+
   float: left;
+
   margin-bottom: 10px;
+
 }
+
+
+
 
 .activity.alt {
+
   width: 100%;
+
   float: right;
+
   margin-bottom: 10px;
+
 }
+
+
+
 
 .activity span {
+
   float: left;
+
 }
+
+
+
 
 .activity.alt span {
+
   float: right;
+
 }
+
 .activity span, .activity.alt span {
+
   width: 45px;
+
   height: 45px;
+
   line-height: 45px;
+
   border-radius: 50%;
+
   -webkit-border-radius: 50%;
+
   background: #eee;
+
   text-align: center;
+
   color: #fff;
+
   font-size: 16px;
+
 }
+
+
+
 
 .activity.terques span {
+
   background: #8dd7d6;
+
 }
+
+
+
 
 .activity.terques h4 {
+
   color: #8dd7d6;
+
 }
+
 .activity.purple span {
+
   background: #b984dc;
+
 }
+
+
+
 
 .activity.purple h4 {
+
   color: #b984dc;
+
 }
+
 .activity.blue span {
+
   background: #90b4e6;
+
 }
+
+
+
 
 .activity.blue h4 {
+
   color: #90b4e6;
+
 }
+
 .activity.green span {
+
   background: #aec785;
+
 }
+
+
+
 
 .activity.green h4 {
+
   color: #aec785;
+
 }
+
+
+
 
 .activity h4 {
+
   margin-top:0 ;
+
   font-size: 16px;
+
 }
+
+
+
 
 .activity p {
+
   margin-bottom: 0;
+
   font-size: 13px;
+
 }
+
+
+
 
 .activity .activity-desk i, .activity.alt .activity-desk i {
+
   float: left;
+
   font-size: 18px;
+
   margin-right: 10px;
+
   color: #bebebe;
+
 }
+
+
 
 .activity .activity-desk {
+
   margin-left: 70px;
+
   position: relative;
+
 }
+
+
+
 
 .activity.alt .activity-desk {
+
   margin-right: 70px;
+
   position: relative;
+
 }
+
+
+
 
 .activity.alt .activity-desk .panel {
+
   float: right;
+
   position: relative;
+
 }
+
+
+
 
 .activity-desk .panel {
+
   background: #F4F4F4 ;
+
   display: inline-block;
+
 }
 
 
+
+
+
 .activity .activity-desk .arrow {
+
   border-right: 8px solid #F4F4F4 !important;
+
 }
+
 .activity .activity-desk .arrow {
+
   border-bottom: 8px solid transparent;
+
   border-top: 8px solid transparent;
+
   display: block;
+
   height: 0;
+
   left: -7px;
+
   position: absolute;
+
   top: 13px;
+
   width: 0;
+
 }
 
+
+
+
 .activity-desk .arrow-alt {
+
   border-left: 8px solid #F4F4F4 !important;
+
 }
 
+
+
+
 .activity-desk .arrow-alt {
+
   border-bottom: 8px solid transparent;
+
   border-top: 8px solid transparent;
+
   display: block;
+
   height: 0;
+
   right: -7px;
+
   position: absolute;
+
   top: 13px;
+
   width: 0;
+
 }
+
+
+
 
 .activity-desk .album {
+
   display: inline-block;
+
   margin-top: 10px;
+
 }
+
+
+
 
 .activity-desk .album a{
+
   margin-right: 10px;
+
 }
+
+
+
 
 .activity-desk .album a:last-child{
+
   margin-right: 0px;
+
 }
 
 
-/* FOOTER */ /*Pes ediyorum*/
+
+
+
+/* FOOTER */
+
 .footer {
+
   background-color: #f8f9fa;
+
+  padding: 30px 4;
+
   font-family: 'Roboto', sans-serif;
-  display: flex;
-   justify-content: space-around; 
-   align-items: center ; 
-   padding: 50px 100px 50px 100px;
+
 }
+
+
+
 
 .footer h4 {
+
   color: #333;
+
   font-size: 18px;
+
   font-weight: bold;
+
   margin-top: 0;
+
 }
+
+
+
 
 .footer p {
+
   color: #666;
+
   font-size: 14px;
+
   line-height: 1.5;
-  margin-bottom: 10px;
-  width: 80%;
+
+  width: 90%;
+
 }
 
-.footer .row {
-  margin-bottom: 20px;
-}
 
-.footer .col-md-12 {
-  margin-top: 20px;
-}
+
+
+
 
 .footer .text-center {
+
   text-align: center;
+
   color: #888;
+
   font-size: 12px;
+
 }
 
 
 
-.social-media li a {
-  text-decoration: none;
-} 
+
 .social-media {
-  list-style: none;  
+
   display: flex;
-  justify-content: space-between;
+
+  justify-content: center;
+
   list-style: none;
+
   padding: 0;
-  margin-bottom: 20px;
-  width: 90%;
+
 }
+
+
 
 
 
 .social-media img {
-  width: 30%;
+
+  width: 55%;
+
+  height: 60%;
+
+  float: left;
+
+  margin-left: 5%;
+
 }
+
+
+
 
 .quick-links {
+
   list-style: none;
+
   padding: 15;
+
   text-align: left;
+
   width: 55%;
+
   height: 50%;
+
   float: left;
+
   margin-left: auto;
+
 }
+
+
+
 
 .quick-links li {
+
   display: inline;
+
   margin: 0 10px;
+
 }
+
+
+
 
 .quick-links li a {
+
   text-decoration: none;
+
   color: #666;
+
   font-size: 24px;
+
   margin-left: left;
+
 }
+
+
+
 
 .quick-links li a:hover {
+
   color: #333;
-}
-.list{
-  display: flex;   
-  list-style: none;  
-  justify-content: space-between;
+
 }
 
-.list li a {
-  text-decoration: none;
-  color: #333;
-}
+
+
 
 
 
 
 /* up button */
+
 .to-top {
+
   position: fixed;
+
   bottom: 2px;
+
   right: 2px;
+
   width: 200px;
+
   height: 200px;
+
   border-radius: 50%;
+
   display: flex;
+
   justify-content: center;
+
   align-items: center;
+
   cursor: pointer;
+
   opacity: 0;
+
   transition: all 0.2s ease-in-out;
+
 }
 
+
+
+
 .show-scrolltop {
+
   opacity: 1;
+
 }
+
+
+
 
 /* footer componnet css */
 
+
+
+
 /* FOOTER */ /*Pes ediyorum*/
+
 .footer {
+
   background-color: #f8f9fa;
+
   font-family: 'Roboto', sans-serif;
+
   display: flex;
-   justify-content: space-around; 
-   align-items: center ; 
+
+   justify-content: space-around;
+
+   align-items: center ;
+
    padding: 50px 100px 50px 100px;
+
 }
+
+
+
 
 .footer h4 {
+
   color: #333;
+
   font-size: 18px;
+
   font-weight: bold;
+
   margin-top: 0;
+
 }
+
+
+
 
 .footer p {
+
   color: #666;
+
   font-size: 14px;
+
   line-height: 1.5;
+
   margin-bottom: 10px;
+
   width: 80%;
+
 }
+
+
+
 
 .footer .row {
+
   margin-bottom: 20px;
+
 }
+
+
+
 
 .footer .col-md-12 {
+
   margin-top: 20px;
+
 }
 
+
+
+
 .footer .text-center {
+
   text-align: center;
+
   color: #888;
+
   font-size: 12px;
+
 }
+
+
+
 
 
 
 .social-media li a {
+
   text-decoration: none;
-} 
-.social-media {
-  list-style: none;  
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
-  margin-bottom: 20px;
-  width: 90%;
+
 }
+
+.social-media {
+
+  list-style: none;
+
+  display: flex;
+
+  justify-content: space-between;
+
+  list-style: none;
+
+  padding: 0;
+
+  margin-bottom: 20px;
+
+  width: 90%;
+
+}
+
+
+
 
 
 
 .social-media img {
+
   width: 30%;
+
 }
+
+
+
 
 .quick-links {
+
   list-style: none;
+
   padding: 15;
+
   text-align: left;
+
   width: 55%;
+
   height: 50%;
+
   float: left;
+
   margin-left: auto;
+
 }
+
+
+
 
 .quick-links li {
+
   display: inline;
+
   margin: 0 10px;
+
 }
+
+
+
 
 .quick-links li a {
+
   text-decoration: none;
+
   color: #666;
+
   font-size: 24px;
+
   margin-left: left;
+
 }
+
+
+
 
 .quick-links li a:hover {
+
   color: #333;
-}
-.list{
-  display: flex;   
-  list-style: none;  
-  justify-content: space-between;
+
 }
 
-.list li a {
-  text-decoration: none;
-  color: #333;
+.list{
+
+  display: flex;
+
+  list-style: none;
+
+  justify-content: space-between;
+
 }
+
+
+
+
+.list li a {
+
+  text-decoration: none;
+
+  color: #333;
+
+}
+
+
+
 
 
 /* up button */
+
 .to-top {
+
   position: fixed;
+
   bottom: 2px;
+
   right: 2px;
+
   width: 200px;
+
   height: 200px;
+
   border-radius: 50%;
+
   display: flex;
+
   justify-content: center;
+
   align-items: center;
+
   cursor: pointer;
+
   opacity: 0;
+
   transition: all 0.2s ease-in-out;
+
 }
 
+
+
+
 .show-scrolltop {
+
   opacity: 1;
+
 }
+
+
+
+
+
+
+
